# podcast-active-fetcher

./: .env.local  .gitignore  .terraform.lock.hcl  MODAL_DEPLOYMENT.md  README.md  anon.session  bot.session  deploy_bot.py  example_taddy_search.py  main.tf  podcast_bot.session  pyproject.toml  requirements-bot.txt  requirements-lambda.txt  setup_modal_secrets.py  terraform.tfstate  terraform.tfstate.backup
bot/: README_modal_deployment.md  bot_aiogram.py  main.py  modal_fastapi_bot.py  set_webhook.py  webhook_bot.py
podcast_fetcher/: __init__.py  add_podcast.py  analyze_transcripts.py  config.py  database.py  fetch_episodes.py  fetch_episodes_with_modal.py  fetch_transcripts.py  keys.py  models.py  podcast_agent.py  process_transcripts.py  rss_parser.py  search_podcasts.py  taddy_search.py  talk_to_podcast_episodes.py  tools.py
podcast_fetcher/data/: podcast_episodes.db
ui/: package-lock.json
ui/src/app/: page.tsx
